# rchip

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.inc  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  description-pak
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: Makefile.am  Makefile.in  apps.noside.rchip.gschema.xml  msdaemon.desktop  msdaemon.exe.lnk  msremote.desktop  rchip.desktop  rchip.exe.lnk  rchip_status_window.glade
data/.svn/: entries
data/.svn/text-base/: beaker_green.png.svn-base  flask_red.png.svn-base  flask_yellow.png.svn-base  msdeamon.desktop.svn-base  msdeamon.png.svn-base  msdeamon.svg.svn-base  msremote.desktop.svn-base  msremote.png.svn-base  msremote.svg.svn-base
data/icons/: Makefile  Makefile.am  Makefile.in
data/icons-hicolor/: Makefile.am
data/icons/hicolor/: Makefile.am  Makefile.in
data/icons/hicolor/16x16/: Makefile.in
data/icons/hicolor/16x16/apps/: Makefile.am  Makefile.in
data/icons/hicolor/22x22/: Makefile.in
data/icons/hicolor/22x22/apps/: Makefile.am  Makefile.in
data/icons/hicolor/24x24/: Makefile.am  Makefile.in
data/icons/hicolor/24x24/apps/: Makefile.am  Makefile.in
data/icons/hicolor/256x256/: Makefile.am  Makefile.in
data/icons/hicolor/256x256/apps/: Makefile.am  Makefile.in
data/icons/hicolor/32x32/: Makefile.in
data/icons/hicolor/32x32/apps/: Makefile.am  Makefile.in
data/icons/hicolor/48x48/: Makefile.in
data/icons/hicolor/48x48/apps/: Makefile.am  Makefile.in
data/icons/hicolor/scalable/: Makefile.in
data/icons/hicolor/scalable/apps/: Makefile.am  Makefile.in
data/icons/src/: Makefile  Makefile.am  Makefile.in
data/icons/svg/: Makefile.am  Makefile.in
data/pluggable-xml/: Makefile.am  banshee.music.xml  rhythmbox.music.xml  smplayer.video.xml  vlc.video.xml
data/settings-xml/: Makefile.am  apps.noside.rchip.gschema.xml  music.txt  test.xml
data/ui/: Makefile.am  Makefile.in  rchip_status_window.glade
doc/: Makefile.am  OVERVIEW  PLUGABLEXML
doc-pak/: AUTHORS  README  TODO
m4/: Makefile  Makefile.am  Makefile.in  glib.m4  json.m4  music.m4  mysql.m4  verbosity.m4  xml.m4
man/: Makefile.am  rchip.1
scripts/: build.sh  change_log_create  changelogCreate  gnu_file.sh  icon_search  winInstaller.nsi
src/: .dbus.c.swp  .swp  .tray.c.swp  Makefile  Makefile.am  Makefile.in  Makefile.win  cmdhandler.c  cmdhandler.c.bak  cmdhandler.h  cmdhandler.h.gch  dbus.bak.c  dbus.c  dbus.h  dbus.h.gch  main.c  msDaemon.nsi  msdaemon  msdaemon.c  mstray.c  mstray.h  notifications.c  notifications.h  resource.rc  rest.c  rest.h  settings.c  settings.h  showlist.c  showlist.h  sql.c  sql.h  sql.h.gch  status.c  status.h  temp  tray.c  tray.h  utils.c  utils.h  (+2 more)
