SUBDIRS = . data src

CLEANFILES = \
	*.tar.gz

DISTCLEANFILES = \
        *.bak \
        *~ \
        *.pidb

MAINTAINERCLEANFILES = \
        compile \
        INSTALL \
        config.h.in \
        aclocal.m4 \
        ltmain.sh \
        Makefile.in \
        depcomp \
        missing \
        install-sh \
        config.sub \
        config.guess \
        mkinstalldirs

clean-local:
	rm -rf bin
