pngdir=$(datadir)/madsci/

png_DATA = 	beaker_blue.png         \
		beaker_red.png		\
		flask_blue.png   	\
		flask_red.png     	\
		beaker_green.png  	\
		beaker_yellow.png  	\
		flask_green.png  	\
		flask_yellow.png	\
		rchip_server.png


XTRA_DIST = $(png_DATA)

createdirs:
	mkdir $(datadir)/madsci/

CLEANFILES = Makefile 
